CSS Fixes (#22)
* Added Custom status emoji in rhs posts
Modified the getCurrentUserLastPostGroupFirstPostId util to handle comments and replies

* Review fixes
Moved Enable custom status config setting to last of the page
Modified custom status modal to show only those suggestions that are not in the recent list
Fixed CSS of the custom status modal

* Review and post rebase fixes
Optimized the post list not to find currentUserLastPost if Update status post header is not visible
Fixed the styling of the channel header custom status
Fixed the coloring of the Set status menu option in status dropdown
Fixed the styling of the custom status modal
Fixed the styling of the custom status tooltip everywhere
Fixed the styling of the Update your status post header
Added custom status emoji in the sidebar channel where new component is used after rebase
Fixed the styling of the new emoji added in the sidebar channel list

* Typecheck fixes and updated snapshots

* Modified the getLastCurrentUserPostWithHeaderId util for better readability

--- a/components/custom_status/custom_status.scss
+++ b/components/custom_status/custom_status.scss
@@ -17,7 +17,7 @@
 
     .modal-footer {
         margin-top: 20px;
-        padding: 0 12px 8px;
+        padding: 0 24px 8px;
     }
 
     .GenericModal__header {
@@ -151,8 +151,9 @@
     display: flex;
     font-size: inherit;
     min-height: 40px;
+    width: 97%;
     align-items: center;
-    padding: 0 20px;
+    padding: 0 18px;
     color: var(--center-channel-color);
     &:hover {
         background-color: rgba(var(--center-channel-color-rgb), 0.08);
@@ -165,7 +166,7 @@
     }
 }
 .statusSuggestion__icon{
-    margin-right: 16px;
+    margin-right: 15px;
     margin-bottom: 1px;
 }
 
